--- a/slide5.html
+++ b/slide5.html
@@ -325,23 +325,50 @@
   </div>
 
   <!-- SECTION 3: Bring Your Own Platform Section -->
-  <h2 class="byo-platform-heading">Bring Your Own Platforms</h2>
-  <div class="platform-cards">
-    <div class="platform-card">
-      <img src="images/AWS.png" alt="AWS" />
-      <h3>AWS</h3>
+<!-- SECTION 3: Bring Your Own Platform Section -->
+<h2 class="byo-platform-heading">Bring Your Own Platforms</h2>
+<div class="platform-cards">
+  
+  <!-- AWS -->
+  <div class="platform-card byo-card">
+    <div style="display: flex; gap: 0.8rem; justify-content: center; margin-bottom: -10px;">
+      <img src="images/AWS.png" alt="AWS" style="width: 40px; height: 40px;">
+      <img src="images/Azure.png" alt="Extra Icon" style="width: 40px; height: 40px;">
+      <img src="images/Azure.png" alt="Extra Icon" style="width: 40px; height: 40px;">
     </div>
-    <div class="platform-card">
-      <img src="images/google-cloud.png" alt="Google Cloud" />
-      <h3>Google Cloud</h3>
-    </div>
-     <div class="platform-card">
-      <img src="images/Azure.png" alt="AZURE" />
-      <h3>AZURE</h3>
-    </div>
-    <div class="platform-card">
-      <img src="images/Kubernetes.png" alt="Kubernetes" />
-      <h3>Kubernetes</h3>
-    </div>
+    <h3>AWS</h3>
   </div>
+
+  <!-- Google Cloud -->
+  <div class="platform-card byo-card">
+    <div style="display: flex; gap: 0.8rem; justify-content: center; margin-bottom: -10px;">
+      <img src="images/google-cloud.png" alt="Google Cloud" style="width: 40px; height: 40px;">
+      <img src="images/Azure.png" alt="Extra Icon" style="width: 40px; height: 40px;">
+      <img src="images/Azure.png" alt="Extra Icon" style="width: 40px; height: 40px;">
+    </div>
+    <h3>Google Cloud</h3>
+  </div>
+
+  <!-- Azure -->
+  <div class="platform-card byo-card">
+    <div style="display: flex; gap: 0.8rem; justify-content: center; margin-bottom: -10px;">
+      <img src="images/Azure.png" alt="Azure" style="width: 40px; height: 40px;">
+      <img src="images/Azure.png" alt="Extra Icon" style="width: 40px; height: 40px;">
+      <img src="images/Azure.png" alt="Extra Icon" style="width: 40px; height: 40px;">
+    </div>
+    <h3>Azure</h3>
+  </div>
+
+  <!-- Kubernetes -->
+  <div class="platform-card byo-card">
+    <div style="display: flex; gap: 0.8rem; justify-content: center; margin-bottom: -10px;">
+      <img src="images/Kubernetes.png" alt="Kubernetes" style="width: 40px; height: 40px;">
+      <img src="images/Azure.png" alt="Extra Icon" style="width: 40px; height: 40px;">
+      <img src="images/Azure.png" alt="Extra Icon" style="width: 40px; height: 40px;">
+    </div>
+    <h3>Kubernetes</h3>
+  </div>
+
+</div>
+
 </section>
