--- a/slide8.html
+++ b/slide8.html
@@ -174,24 +174,23 @@
   <!-- First Row: Feature Cards -->
   <div class="bi-dashboard-card-container">
     <div class="bi-dashboard-card">
-      <h2 class="bi-dashboard-card-title">Reporting & Dashboard Features</h2>
+      <h2 class="bi-dashboard-card-title">Agent Features</h2>
       <ul class="bi-dashboard-card-list">
-        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Trend line charts and breakdown of expirations by state</li>
-        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Frequency analysis of shared data categories</li>
-        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Breakdown of consent authorization types</li>
-        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Tracking of operational activity trends and KPIs</li>
-        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Bar chart of consents by purpose</li>
-        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Detailed data table with patient demographics and consent details</li>
-        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Pie chart of expirations per state with drill-down capabilities</li>
+        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Powered by Google’s latest GenAI models (e.g., Gemini 2.5 Flash) for speed, accuracy & scale</li>
+        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Query Agent: Natural language → SQL; edit, save, email</li>
+        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> BI Agent: On-demand reports & charts; save, share, email</li>
+        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Enterprise-ready: secure, scalable integration</li>
+        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Built on Google GenAI (Gemini 2.5 Flash) for accuracy, scale & speed</li>
+        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Secure, enterprise-grade integration</li>
       </ul>
     </div>
 
     <div class="bi-dashboard-card">
-      <h2 class="bi-dashboard-card-title">Saved Reports & Sharing</h2>
+      <h2 class="bi-dashboard-card-title">BUSINESS VALUE</h2>
       <ul class="bi-dashboard-card-list">
-        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Save reports and dashboards with meaningful names for reuse</li>
-        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Export reports as PDFs for compliance or audit purposes</li>
-        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Instantly share insights via the Mail Report feature</li>
+        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Rapid insights through reports & dashboards</li>
+        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Advanced reasoning: anomaly detection, segmentation, root-cause analysis</li>
+        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Compliance-ready reports with save, share & email options</li>
       </ul>
     </div>
   </div>
@@ -202,9 +201,9 @@
       <img src="images/Green-2.png" alt="Chart Icon" class="bi-smallcard-icon">
       <span>Privacy Disclosure Expirations by Week</span>
     </div>
-    <div class="bi-dashboard-smallcard" data-img-src="images/Blue.png">
-      <img src="images/Blue.png" alt="Chart Icon" class="bi-smallcard-icon">
-      <span>Active Consents by State of Residence (Q2 2025)</span>
+    <div class="bi-dashboard-smallcard" data-img-src="images/Query Agent.png">
+      <img src="images/Query Agent.png" alt="Chart Icon" class="bi-smallcard-icon">
+      <span>Query Agent</span>
     </div>
     <div class="bi-dashboard-smallcard" data-img-src="images/Circle.png">
       <img src="images/Circle.png" alt="Chart Icon" class="bi-smallcard-icon">
