--- a/slide12.html
+++ b/slide12.html
@@ -1,12 +1,18 @@
-<section class="index-slide" data-auto-animate>
+<section class="index-slide background-image" data-auto-animate>
   <style>
+    .background-image {
+      background-image: url('images/Group-Photo.jpg');
+      background-size: cover;
+      background-position: center;
+    }
+
     /* Main container for the thank you content */
     .thank-you-container {
       display: flex;
       flex-direction: column;
       justify-content: center; /* Vertical centering */
       align-items: center;     /* Horizontal centering */
-      height: 75vh;            /* Takes up most of the slide's vertical space */
+      height:129vh;            /* Takes up most of the slide's vertical space */
       text-align: center;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
     }
@@ -48,8 +54,9 @@
       display: flex;
       align-items: center;
       gap: 0.5rem; /* Space between icon and text */
+      font-weight: 800;
       font-size: 1rem;
-      color: #333;
+      color: #000000;
     }
 
     .contact-item svg {
@@ -82,7 +89,6 @@
   <!-- Centered Thank You Section -->
   <div class="thank-you-container">
     <h2 class="thank-you-title">Thank You!</h2>
-    <hr class="thank-you-divider" />
     <div class="contact-info">
       <div class="contact-item">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
