--- a/slide5.html
+++ b/slide5.html
@@ -7,7 +7,7 @@
       display: flex;
       align-items: center;
       justify-content: flex-start;
-      margin-top: 0.5rem;
+      margin-top: 0rem;
       padding: 0 24px;
       gap: 0.6rem;
     }
@@ -225,6 +225,8 @@
     .byo-platform-heading + .platform-cards .platform-card:nth-child(1) { animation-delay: 4.3s; }
     .byo-platform-heading + .platform-cards .platform-card:nth-child(2) { animation-delay: 4.45s; }
     .byo-platform-heading + .platform-cards .platform-card:nth-child(3) { animation-delay: 4.6s; }
+    .byo-platform-heading + .platform-cards .platform-card:nth-child(4) { animation-delay: 4.75s; }
+
 
   </style>
 
@@ -259,7 +261,7 @@
     
     <!-- Card 1: Green Field -->
     <div class="platform-card" style="width: 250px; height: 80px; padding: 1rem;">
-        <img src="images/Green.png" alt="Green Field Icon" style="width: 40px; height: 40px; margin-right: 1.2rem;">
+        <img src="images/Green Field (New).webp" alt="Green Field Icon" style="width: 40px; height: 40px; margin-right: 1.2rem;">
         <div>
             <h3 style="font-size: 1.1rem; font-weight: 700; white-space: normal; margin-bottom: 5px;">Green Field (New)</h3>
             <p style="font-size: 0.95rem; color: #666; margin: 0; line-height: 1.3;">Supports new application development</p>
@@ -333,40 +335,40 @@
   <div class="platform-card byo-card">
     <div style="display: flex; gap: 0.8rem; justify-content: center; margin-bottom: -10px;">
       <img src="images/AWS.png" alt="AWS" style="width: 40px; height: 40px;">
-      <img src="images/Azure.png" alt="Extra Icon" style="width: 40px; height: 40px;">
-      <img src="images/Azure.png" alt="Extra Icon" style="width: 40px; height: 40px;">
+      <img src="images/Amazon OpenSearch Service.webp" alt="Extra Icon" style="width: 40px; height: 40px;">
+      <img src="images/Sagmaker.jpg" alt="Extra Icon" style="width: 40px; height: 40px;">
     </div>
-    <h3>AWS</h3>
+    <h3>AWS & SageMaker</h3>
   </div>
 
   <!-- Google Cloud -->
   <div class="platform-card byo-card">
     <div style="display: flex; gap: 0.8rem; justify-content: center; margin-bottom: -10px;">
       <img src="images/google-cloud.png" alt="Google Cloud" style="width: 40px; height: 40px;">
-      <img src="images/Azure.png" alt="Extra Icon" style="width: 40px; height: 40px;">
-      <img src="images/Azure.png" alt="Extra Icon" style="width: 40px; height: 40px;">
+      <img src="images/Vertex -2.png" alt="Extra Icon" style="width: 40px; height: 40px;">
+      <img src="images/BigQuery + BigQuery ML.png" alt="Extra Icon" style="width: 40px; height: 40px;">
     </div>
-    <h3>Google Cloud</h3>
+    <h3>GCP , Vertex AI & etc</h3>
   </div>
 
   <!-- Azure -->
   <div class="platform-card byo-card">
     <div style="display: flex; gap: 0.8rem; justify-content: center; margin-bottom: -10px;">
       <img src="images/Azure.png" alt="Azure" style="width: 40px; height: 40px;">
-      <img src="images/Azure.png" alt="Extra Icon" style="width: 40px; height: 40px;">
-      <img src="images/Azure.png" alt="Extra Icon" style="width: 40px; height: 40px;">
+      <img src="images/Azure Bot Service.jpg" alt="Extra Icon" style="width: 40px; height: 40px;">
+      <img src="images/Azure Machine Learning (Azure ML).jpg" alt="Extra Icon" style="width: 40px; height: 40px;">
     </div>
-    <h3>Azure</h3>
+    <h3>Azure , Azure ML & etc</h3>
   </div>
 
   <!-- Kubernetes -->
   <div class="platform-card byo-card">
     <div style="display: flex; gap: 0.8rem; justify-content: center; margin-bottom: -10px;">
       <img src="images/Kubernetes.png" alt="Kubernetes" style="width: 40px; height: 40px;">
-      <img src="images/Azure.png" alt="Extra Icon" style="width: 40px; height: 40px;">
-      <img src="images/Azure.png" alt="Extra Icon" style="width: 40px; height: 40px;">
+      <img src="images/Kubeflow.png" alt="Kubeflow" style="width: 40px; height: 40px;">
+      <img src="images/KServe.png" alt="KServe" style="width: 40px; height: 40px;">
     </div>
-    <h3>Kubernetes</h3>
+    <h3>Kubernetes & KServe</h3>
   </div>
 
 </div>
