--- a/slide8.html
+++ b/slide8.html
@@ -176,21 +176,21 @@
     <div class="bi-dashboard-card">
       <h2 class="bi-dashboard-card-title">Agent Features</h2>
       <ul class="bi-dashboard-card-list">
-        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Powered by Google’s latest GenAI models (e.g., Gemini 2.5 Flash) for speed, accuracy & scale</li>
-        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Query Agent: Natural language → SQL; edit, save, email</li>
-        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> BI Agent: On-demand reports & charts; save, share, email</li>
-        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Enterprise-ready: secure, scalable integration</li>
-        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Built on Google GenAI (Gemini 2.5 Flash) for accuracy, scale & speed</li>
-        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Secure, enterprise-grade integration</li>
+        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Instant Reports: Generate reports and charts within seconds</li>
+        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Natural Language → SQL: Conversational queries auto-converted to SQL</li>
+        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Technical Flexibility: Edit, re-run, and save queries; download and email reports in PDF</li>
+        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Advanced Reasoning: Detect anomalies, segment data, and uncover root causes automatically</li>
+        <!-- <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Built on Google GenAI (Gemini 2.5 Flash) for accuracy, scale & speed</li>
+        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Secure, enterprise-grade integration</li> -->
       </ul>
     </div>
 
     <div class="bi-dashboard-card">
       <h2 class="bi-dashboard-card-title">BUSINESS VALUE</h2>
       <ul class="bi-dashboard-card-list">
-        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Rapid insights through reports & dashboards</li>
-        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Advanced reasoning: anomaly detection, segmentation, root-cause analysis</li>
-        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Compliance-ready reports with save, share & email options</li>
+        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> For Business Teams: NLP-driven reports surface KPIs, insights, and trends for faster decisions</li>
+        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> For Data Engineers: Streamline complex queries and accelerate data analysis</li>
+        <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> For Application Developers: Natively integrate agents into existing applications</li>
       </ul>
     </div>
   </div>
