--- a/slide1.html
+++ b/slide1.html
@@ -184,7 +184,7 @@
     <div class="fusefy-logo-container fragment" data-fragment-index="0">
       <img
         style="padding-top: 70px; width: 300px; height: 85px;"
-        src="images/fusefy.svg"
+        src="images/fusefy-slide1.svg"
         alt="Fusefy Logo"
         class="fusefy-logo custom-appear"
       />
