--- a/slide10.html
+++ b/slide10.html
@@ -419,7 +419,7 @@
       <!-- Top row with 3 cards -->
       <div class="top-row">
         <!-- Healthcare Agent -->
-        <div class="agent-card card-healthcare" data-storylane-url="https://app.storylane.io/share/gh3snrqq5ljv">
+        <div class="agent-card card-healthcare" data-storylane-url="https://app.storylane.io/share/ppzafgb2wm0i">
           <div class="card-header">
             <div class="agent-icon icon-healthcare">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
