--- a/slide8.html
+++ b/slide8.html
@@ -93,6 +93,32 @@
       justify-content: center;
     }
 
+        .privacy-btn {
+      display: block;
+      width: 70%;
+      margin: 1rem 0 0 0;
+      padding: 0.6rem 0;
+      background-color: #fafafa;
+      color: #495057 !important;
+      font-weight: 600;
+      font-size: 1rem;
+      border: none;
+      border-radius: 10px;
+      text-align: center;
+      text-decoration: none;
+      box-shadow: 0 2px 8px rgba(79, 63, 240, 0.08);
+      transition: background 0.2s, box-shadow 0.2s;
+      cursor: pointer;
+      letter-spacing: 0.02em;
+    }
+
+    .privacy-btn:hover,
+    .privacy-btn:focus {
+      background-color: #d7d7d7;
+      box-shadow: 0 4px 16px rgba(237, 237, 238, 0.15);
+    }
+
+
     .bi-dashboard-smallcard:hover {
       transform: translateY(-4px);
       box-shadow: 0 6px 14px rgba(0, 0, 0, 0.1);
@@ -183,6 +209,9 @@
         <!-- <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Built on Google GenAI (Gemini 2.5 Flash) for accuracy, scale & speed</li>
         <li class="bi-dashboard-card-list-item"><span class="bi-dashboard-check-icon">✔</span> Secure, enterprise-grade integration</li> -->
       </ul>
+      <a href="https://app.storylane.io/share/ppzafgb2wm0i" target="_blank" class="privacy-btn">
+          BI Agent Demo →
+        </a>
     </div>
 
     <div class="bi-dashboard-card">
