--- a/slide5.html
+++ b/slide5.html
@@ -328,47 +328,53 @@
 
   <!-- SECTION 3: Bring Your Own Platform Section -->
 <!-- SECTION 3: Bring Your Own Platform Section -->
+<!-- SECTION 3: Bring Your Own Platform Section -->
+<!-- SECTION 3: Bring Your Own Platform Section -->
 <h2 class="byo-platform-heading">Bring Your Own Platforms</h2>
 <div class="platform-cards">
-  
+
   <!-- AWS -->
-  <div class="platform-card byo-card">
-    <div style="display: flex; gap: 0.8rem; justify-content: center; margin-bottom: -10px;">
+  <div class="platform-card byo-card" style="display: flex; flex-direction: row; justify-content: center; align-items: center; gap: 0.5rem; width: auto; padding: 0.8rem 1.2rem;">
+    <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; gap: 0.2rem;">
       <img src="images/AWS.png" alt="AWS" style="width: 40px; height: 40px;">
-      <img src="images/Amazon OpenSearch Service.webp" alt="Extra Icon" style="width: 40px; height: 40px;">
-      <img src="images/Sagmaker.jpg" alt="Extra Icon" style="width: 40px; height: 40px;">
+      <h3 style="font-size: 1.1rem; font-weight: 700; margin: 0;">AWS</h3>
     </div>
-    <h3>AWS & SageMaker</h3>
+    <span style="font-size: 2rem; color: #888; font-weight: bold; margin: 0 0.8rem;">→</span>
+    <img src="images/Amazon OpenSearch Service.webp" alt="Extra Icon" style="width: 38px; height: 38px; margin: 0;">
+    <img src="images/Sagmaker.jpg" alt="Extra Icon" style="width: 38px; height: 38px; margin: 0;">
   </div>
 
   <!-- Google Cloud -->
-  <div class="platform-card byo-card">
-    <div style="display: flex; gap: 0.8rem; justify-content: center; margin-bottom: -10px;">
+  <div class="platform-card byo-card" style="display: flex; flex-direction: row; justify-content: center; align-items: center; gap: 0.5rem; width: auto; padding: 0.8rem 1.2rem;">
+    <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; gap: 0.2rem;">
       <img src="images/google-cloud.png" alt="Google Cloud" style="width: 40px; height: 40px;">
-      <img src="images/Vertex -2.png" alt="Extra Icon" style="width: 40px; height: 40px;">
-      <img src="images/BigQuery + BigQuery ML.png" alt="Extra Icon" style="width: 40px; height: 40px;">
+      <h3 style="font-size: 1.1rem; font-weight: 700; margin: 0;">GCP</h3>
     </div>
-    <h3>GCP , Vertex AI & etc</h3>
+    <span style="font-size: 2rem; color: #888; font-weight: bold; margin: 0 0.8rem;">→</span>
+    <img src="images/Vertex -2.png" alt="Extra Icon" style="width: 38px; height: 38px; margin: 0;">
+    <img src="images/BigQuery + BigQuery ML.png" alt="Extra Icon" style="width: 38px; height: 38px; margin: 0;">
   </div>
 
   <!-- Azure -->
-  <div class="platform-card byo-card">
-    <div style="display: flex; gap: 0.8rem; justify-content: center; margin-bottom: -10px;">
+  <div class="platform-card byo-card" style="display: flex; flex-direction: row; justify-content: center; align-items: center; gap: 0.5rem; width: auto; padding: 0.8rem 1.2rem;">
+    <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; gap: 0.2rem;">
       <img src="images/Azure.png" alt="Azure" style="width: 40px; height: 40px;">
-      <img src="images/Azure Bot Service.jpg" alt="Extra Icon" style="width: 40px; height: 40px;">
-      <img src="images/Azure Machine Learning (Azure ML).jpg" alt="Extra Icon" style="width: 40px; height: 40px;">
+      <h3 style="font-size: 1.1rem; font-weight: 700; margin: 0;">Azure</h3>
     </div>
-    <h3>Azure , Azure ML & etc</h3>
+    <span style="font-size: 2rem; color: #888; font-weight: bold; margin: 0 0.8rem;">→</span>
+    <img src="images/Azure Bot Service.jpg" alt="Extra Icon" style="width: 38px; height: 38px; margin: 0;">
+    <img src="images/Azure Machine Learning (Azure ML).jpg" alt="Extra Icon" style="width: 38px; height: 38px; margin: 0;">
   </div>
 
   <!-- Kubernetes -->
-  <div class="platform-card byo-card">
-    <div style="display: flex; gap: 0.8rem; justify-content: center; margin-bottom: -10px;">
+  <div class="platform-card byo-card" style="display: flex; flex-direction: row; justify-content: center; align-items: center; gap: 0.5rem; width: auto; padding: 0.8rem 1.2rem;">
+    <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; gap: 0.2rem;">
       <img src="images/Kubernetes.png" alt="Kubernetes" style="width: 40px; height: 40px;">
-      <img src="images/Kubeflow.png" alt="Kubeflow" style="width: 40px; height: 40px;">
-      <img src="images/KServe.png" alt="KServe" style="width: 40px; height: 40px;">
+      <h3 style="font-size: 1.1rem; font-weight: 700; margin: 0;">Kubernetes</h3>
     </div>
-    <h3>Kubernetes & KServe</h3>
+    <span style="font-size: 2rem; color: #888; font-weight: bold; margin: 0 0.8rem;">→</span>
+    <img src="images/Kubeflow.png" alt="Kubeflow" style="width: 38px; height: 38px; margin: 0;">
+    <img src="images/KServe.png" alt="KServe" style="width: 38px; height: 38px; margin: 0;">
   </div>
 
 </div>
